# transcript

./: .gitignore  README.md  README_for_deployment.md  pyproject.toml  requirements.txt
src/: voice2txt.py
