[tool.poetry]
name = "transcript"
version = "0.1.0"
description = ""
authors = ["https://github.com/KazutoMakino/transcript"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = "^20230314"
torch = ">=2.0.0, !=2.0.1"
tqdm = "^4.65.0"
librosa = "^0.10.0.post2"
pydantic = "^2.0.3"
pysimplegui = "^4.60.5"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
autopep8 = "^2.0.2"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
jupyterlab = "^4.0.11"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203"
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
